--- a/assets/lang/es.json
+++ b/assets/lang/es.json
@@ -752,8 +752,54 @@
   "editEstiramientoFisico": "Editar Estiramiento Físico",
   "enterEstiramientoFisicoName": "Ingresar Nombre del Estiramiento Físico",
   "estiramientoFisicoUpdated": "Estiramiento Físico Actualizado",
-  "selectCalentamientoFisico": "seleccionar Calentamiento Fisico"
-
-
-  
+  "selectCalentamientoFisico": "seleccionar Calentamiento Fisico",
+  "performanceRendimientoPara": "Rendimiento Para",
+  "selectRendimientoPara": "Selecciona el Rendimiento Para",
+  "faseDeTemporada": "Fase de Temporada",
+  "selectFaseDeTemporada": "Selecciona la Fase de Temporada",
+  "faseDeEjercicio": "Fase de Ejercicio",
+  "selectFaseDeEjercicio": "Selecciona una fase de ejercicio",
+  "selectExerciseStance": "Selecciona una posición de ejercicio",
+  "exerciseZonaPrincipalInvolucrada": "Zona Principal Involucrada",
+  "selectExerciseZonaPrincipalInvolucrada": "Selecciona una zona principal involucrada",
+  "selectIntensity": "Seleccionar Intensidad",
+  "addRendimientoFisico": "Añadir Rendimiento Físico",
+  "rendimientoFisicoAdded": "Rendimiento físico añadido exitosamente",
+  "Bajo": "Bajo",
+  "Low": "Low",
+  "Parado": "Parado",
+  "Standing": "Standing",
+  "Superior": "Superior",
+  "Upper Body": "Upper Body",
+  "Fácil": "Fácil",
+  "Easy": "Easy",
+  "Ascendente": "Ascendente",
+  "Ascending": "Ascending",
+  "Gratis": "Gratis",
+  "Free": "Free",
+  "Técnica": "Técnica",
+  "Technique": "Technique",
+  "Pre Temporada": "Pre Temporada",
+  "Pre-Season": "Pre-Season",
+  "Pre-Inicial": "Pre-Inicial",
+  "Pre-Initial": "Pre-Initial",
+  "rendimientoFisico": "Rendimiento Físico",
+  "errorLoadingRendimientoFisico": "Error al cargar el rendimiento físico",
+  "noRendimientoFisicoFound": "No se encontró rendimiento físico",
+  "deleteRendimientoFisico": "Eliminar Rendimiento Físico",
+  "EditRendimientoFisico": "Editar Rendimiento Físico",
+  "enterRendimientoFisicoName": "Introduce el nombre del rendimiento físico",
+  "rendimientoFisicoUpdated": "Rendimiento Físico actualizado correctamente",
+  "tecnica/tactica": "Técnica/Táctica",
+  "errorLoadingTenicaTactica": "Error al cargar técnica/táctica.",
+  "noTenicaTacticaFound": "No se encontraron técnicas/tácticas.",
+  "addTenicaTactica": "Añadir Técnica/Táctica",
+  "deleteTenicaTactica": "Eliminar Técnica/Táctica",
+  "EditTenicaTactica": "Editar Técnica/Táctica",
+  "tenicaTactica": "Técnica/Táctica",
+  "enterTenicaTacticaName": "Ingresa el nombre de la Técnica/Táctica",
+  "tenicaTacticaUpdated": "Técnica/Táctica actualizada con éxito",
+  "exerciseEjercicioPara": "Ejercicio Para",
+  "selectEjercicioPara": "Selecciona Ejercicio Para",
+  "tenicaTacticaAdded": "Técnica Táctica añadida con éxito"
 }
