--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -689,7 +689,6 @@
   "enterVideoPFlacaLink": "Enter the Link for the Thin Person Video",
   "3dImage": "3D Image",
   "actividadFisica": "Physical Activity",
-
   "tiempoCalentamientoFisico": "Warm-Up Time",
   "selectCalentamientoTime": "Select Warm-Up Time",
   "descansoEntreEjercicios": "Rest Between Exercises",
@@ -697,7 +696,6 @@
   "descansoEntreCircuito": "Rest Between Circuits",
   "selectDescansoEntreCircuitoTime": "Select Rest Time Between Circuits",
   "estiramientoEstatico": "Static Stretching",
-
   "selectEstiramientoEstaticoTime": "Select Static Stretch Time",
   "diasALaSemana": "Days Per Week",
   "selectDiasALaSemanaTime": "Select Days Per Week",
@@ -753,5 +751,52 @@
   "editEstiramientoFisico": "Edit Physical Stretching",
   "enterEstiramientoFisicoName": "Enter Physical Stretching Name",
   "estiramientoFisicoUpdated": "Physical Stretching Updated",
-  "selectCalentamientoFisico": "select Physical Warm-up"
+  "selectCalentamientoFisico": "select Physical Warm-up",
+  "performanceRendimientoPara": "Performance For",
+  "selectRendimientoPara": "Select Performance For",
+  "faseDeTemporada": "Season Phase",
+  "selectFaseDeTemporada": "Select Season Phase",
+  "faseDeEjercicio": "Exercise Phase",
+  "selectFaseDeEjercicio": "Select an exercise phase",
+  "selectExerciseStance": "Select an exercise stance",
+  "exerciseZonaPrincipalInvolucrada": "Primary Area Involved",
+  "selectExerciseZonaPrincipalInvolucrada": "Select a primary area involved",
+  "selectIntensity": "Select Intensity",
+  "addRendimientoFisico": "Add Physical Performance",
+  "rendimientoFisicoAdded": "Physical performance added successfully",
+  "Bajo": "Low",
+  "Low": "Low",
+  "Parado": "Standing",
+  "Standing": "Standing",
+  "Superior": "Upper Body",
+  "Upper Body": "Upper Body",
+  "Fácil": "Easy",
+  "Easy": "Easy",
+  "Ascendente": "Ascending",
+  "Ascending": "Ascending",
+  "Gratis": "Free",
+  "Free": "Free",
+  "Técnica": "Technique",
+  "Technique": "Technique",
+  "Pre Temporada": "Pre-Season",
+  "Pre-Season": "Pre-Season",
+  "Pre-Inicial": "Pre-Initial",
+  "Pre-Initial": "Pre-Initial",
+  "rendimientoFisico": "Physical Performance",
+  "errorLoadingRendimientoFisico": "Error loading physical performance",
+  "noRendimientoFisicoFound": "No physical performance found",
+  "deleteRendimientoFisico": "Delete Physical Performance",
+  "EditRendimientoFisico": "Edit Physical Performance",
+  "enterRendimientoFisicoName": "Enter the physical performance name",
+  "rendimientoFisicoUpdated": "Physical performance updated successfully",
+  "tecnica/tactica": "Technique/Tactic",
+  "errorLoadingTenicaTactica": "Error loading technique/tactic.",
+  "noTenicaTacticaFound": "No techniques/tactics found.",
+  "addTenicaTactica": "Add Technique/Tactic",
+  "deleteTenicaTactica": "Delete Technique/Tactic",
+  "EditTenicaTactica": "Edit Technique/Tactic",
+  "tenicaTactica": "Technique/Tactic",
+  "enterTenicaTacticaName": "Enter Technique/Tactic Name",
+  "tenicaTacticaUpdated": "Technique/Tactic updated successfully",
+  "tenicaTacticaAdded": "Tactical Technique added successfully"
 }
