--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -825,6 +825,7 @@
   "enterSodioName": "Enter sodium name",
 
   "estiramientoEspecifico": "Specific stretch",
-  "estiramientoFisicoAdded": "Physical stretch added"
+  "estiramientoFisicoAdded": "Physical stretch added",
+  "se_encontraron": "Found"
 
 }
