--- a/assets/lang/es.json
+++ b/assets/lang/es.json
@@ -828,6 +828,6 @@
   "entersodioNameName": "Introduce el nombre del sodio",
   "enterSodioName": "Introduce el nombre del sodio",
   "estiramientoEspecifico": "Estiramiento específico",
-  "estiramientoFisicoAdded": "Estiramiento físico añadido"
-  
+  "estiramientoFisicoAdded": "Estiramiento físico añadido",
+  "se_encontraron": "Se Encontraron"
 }
