--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -799,22 +799,17 @@
   "enterTenicaTacticaName": "Enter Technique/Tactic Name",
   "tenicaTacticaUpdated": "Technique/Tactic updated successfully",
   "tenicaTacticaAdded": "Tactical Technique added successfully",
-
   "rendimiento": "Performance",
-
   "addMejPreLesiones": "Add Improvement/Injury Prevention",
   "errorLoadingMejPreLesiones": "Error loading Improvements/Injury Preventions",
   "noMejPreLesionesFound": "No Improvements/Injury Preventions found",
   "deleteMejPreLesiones": "Delete Improvement/Injury Prevention",
   "mejPreLesiones": "Improvement/Injury Prevention",
-
   "EditMejPreLesiones": "Edit Improvement/Injury Prevention",
   "enterMejPreLesionesName": "Enter Improvement/Injury Prevention Name",
   "mejPreLesionesUpdated": "Improvement/Injury Prevention updated successfully.",
-
   "exerciseArticulacionPrincipal": "Main Joint",
   "selectExerciseArticulacionPrincipal": "Select Main Joint",
-
   "vitaminaName": "Vitamin name",
   "fibraName": "Fiber name",
   "enterFibraName": "Enter fiber name",
@@ -823,7 +818,6 @@
   "sodioName": "Sodium name",
   "entersodioNameName": "Enter sodium name",
   "enterSodioName": "Enter sodium name",
-
   "estiramientoEspecifico": "Specific stretch",
   "estiramientoFisicoAdded": "Physical stretch added",
   "se_encontraron": "Found",
@@ -831,8 +825,7 @@
   "cantidadDeSeries": "Number of sets",
   "descansoEntreSeries": "Rest between sets",
   "selectDescansoEntreSeriesTime": "Select rest time between sets",
-  
-  "metodoEntrenamiento": "Training Method"
-  
-
+  "metodoEntrenamiento": "Training Method",
+  "cardioHiit": "Cardio/Hiit",
+  "selectCardioHiitTime": "Select Cardio/Hiit time"
 }
