--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -835,6 +835,8 @@
   "nombreRutina": "Routine Name",
   "nombreRutinaHint": "Enter the routine name",
   "nombreRutinaInfoTitle": "Routine Name Information",
-  "nombreRutinaInfoContent": "Enter a descriptive name for your training routine."
-
+  "nombreRutinaInfoContent": "Enter a descriptive name for your training routine.",
+  "selectEstiramientoFisico": "Select Estiramiento Fisico.",
+  "estiramientoFisicoTime": "Time Estiramiento Fisico."
+  
 }
