--- a/assets/lang/es.json
+++ b/assets/lang/es.json
@@ -846,5 +846,7 @@
   "nombreRutinaInfoTitle": "Información del Nombre de la Rutina",
   "nombreRutinaInfoContent": "Ingrese un nombre descriptivo para su rutina de entrenamiento.",
   "selectEstiramientoFisico": "Seleccionar Estiramiento Fisico.",
-  "estiramientoFisicoTime": "Tiempo Estiramiento Fisico."
+  "estiramientoFisicoTime": "Tiempo Estiramiento Fisico.",
+  "nivelDeImpacto": "Nivel De Impacto",
+  "dificultad": "Dificultad"
 }
