--- a/assets/lang/en.json
+++ b/assets/lang/en.json
@@ -839,5 +839,6 @@
   "selectEstiramientoFisico": "Select Estiramiento Fisico.",
   "estiramientoFisicoTime": "Time Estiramiento Fisico.",
   "nivelDeImpacto": "Nivel De Impacto",
-  "dificultad": "difficulty"
+  "dificultad": "difficulty",
+  "activacionDeMusculos": "Muscle Activation"
 }
